[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lcmv_stats"
version = "0.1.0"
description = "Statistical analysis tools for LCMV source-reconstructed EEG/MEG data, optimized for the CIMT Unified Atlas."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Cimt", email = "cimt@informatik.uni-augsburg.de"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Neuro-Informatics",
]

dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
    "mne>=1.0.0",
    "spectral_connectivity>=0.1.0",
    # Install lcmv_xtra directly from GitHub
    "lcmv_xtra @ git+https://github.com/cimt-unia/lcmv_xtra.git",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "jupyter",
]

[tool.setuptools.packages.find]
include = ["lcmv_stats*"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"